--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,35 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+
+    // Android Support Library:
+    compile 'com.android.support:support-v4:23.2.1'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
+    compile 'com.android.support:cardview-v7:23.2.1'
+    compile 'com.android.support:recyclerview-v7:23.2.1'
+
+    // Concurrency:
+    compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'io.reactivex:rxjava:1.1.0'
+
+    // Event Bus:
+    compile 'org.greenrobot:eventbus:3.0.0'
+
+    // HTTP Client:
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.squareup.okio:okio:1.2.0'
+
+    // Disk Caching:
+    compile 'com.jakewharton:disklrucache:2.0.2'
+
+    // Databasing:
+    compile 'nl.qbusict:cupboard:2.1.4'
+
+    // HTML Parsing:
+    compile 'org.jsoup:jsoup:1.8.3'
+
+    // Image Caching and Optimizer:
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.makeramen:roundedimageview:2.2.1'
 }
