--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,11 @@ dependencies {
     compile 'com.android.support:design:23.2.1'
     compile 'com.android.support:cardview-v7:23.2.1'
     compile 'com.android.support:recyclerview-v7:23.2.1'
+    compile 'com.android.support:palette-v7:23.2.1'
+
+    // Dependency Injection:
+    compile 'com.squareup.dagger:dagger:1.2.5'
+    provided 'com.squareup.dagger:dagger-compiler:1.2.5'
 
     // Concurrency:
     compile 'io.reactivex:rxandroid:1.2.1'
@@ -38,7 +43,8 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.0.0'
 
     // HTTP Client:
-    compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    // compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.squareup.okhttp:okhttp:2.7.5'
     compile 'com.squareup.okio:okio:1.2.0'
 
     // Disk Caching:
@@ -53,4 +59,8 @@ dependencies {
     // Image Caching and Optimizer:
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.makeramen:roundedimageview:2.2.1'
+
+    // Debugging:
+    compile 'com.facebook.stetho:stetho:1.3.1'
+    compile 'com.facebook.stetho:stetho-okhttp:1.3.1'
 }
