--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     compile 'com.squareup.dagger:dagger:1.2.5'
     provided 'com.squareup.dagger:dagger-compiler:1.2.5'
 
+    // View Injection:
+    compile 'com.jakewharton:butterknife:8.1.0'
+
     // Concurrency:
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.1.6'
