--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,35 +23,37 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     // Android Support Library:
-    compile 'com.android.support:support-v4:25.1.0'
-    compile 'com.android.support:appcompat-v7:25.1.0'
-    compile 'com.android.support:design:25.1.0'
-    compile 'com.android.support:cardview-v7:25.1.0'
-    compile 'com.android.support:recyclerview-v7:25.1.0'
-    compile 'com.android.support:palette-v7:25.1.0'
+    def supportVersion = "25.3.1"
+    compile "com.android.support:support-v4:$supportVersion"
+    compile "com.android.support:appcompat-v7:$supportVersion"
+    compile "com.android.support:design:$supportVersion"
+    compile "com.android.support:cardview-v7:$supportVersion"
+    compile "com.android.support:recyclerview-v7:$supportVersion"
+    compile "com.android.support:palette-v7:$supportVersion"
     // Dependency Injection:
     compile 'com.squareup.dagger:dagger:1.2.5'
     provided 'com.squareup.dagger:dagger-compiler:1.2.5'
     // View Injection:
-    compile 'com.jakewharton:butterknife:8.1.0'
+    compile 'com.jakewharton:butterknife:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     // Concurrency:
     compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'io.reactivex:rxjava:1.2.5'
+    compile 'io.reactivex:rxjava:1.2.9'
     // Event Bus:
     compile 'org.greenrobot:eventbus:3.0.0'
     // HTTP Client:
     // compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.squareup.okhttp:okhttp:2.7.5'
-    compile 'com.squareup.okio:okio:1.2.0'
+    compile 'com.squareup.okio:okio:1.11.0'
     // Disk Caching:
     compile 'com.jakewharton:disklrucache:2.0.2'
     // Databasing:
-    compile 'nl.qbusict:cupboard:2.1.4'
+    compile 'nl.qbusict:cupboard:2.2.0'
     // HTML Parsing:
     compile 'org.jsoup:jsoup:1.8.3'
     // Image Caching and Optimizer:
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.makeramen:roundedimageview:2.2.1'
+    compile 'com.makeramen:roundedimageview:2.3.0'
     // Debugging:
     compile 'com.facebook.stetho:stetho:1.3.1'
     compile 'com.facebook.stetho:stetho-okhttp:1.3.1'
