--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,9 +20,15 @@ android {
     }
 }
 
+sourceSets {
+    main.java.srcDirs += 'src/main/kotlin'
+}
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+    // Kotlin:
+    compile "org.jetbrains.kotlin:kotlin-stdlib:1.1.2-3"
     // Android Support Library:
     def supportVersion = "25.3.1"
     compile "com.android.support:support-v4:$supportVersion"
@@ -60,7 +66,5 @@ dependencies {
     compile 'com.facebook.stetho:stetho-okhttp:1.3.1'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
-repositories {
-    mavenCentral()
-}
+
 
