--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,14 +2,14 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.3'
+    compileSdkVersion 26
+    buildToolsVersion '26.0.1'
 
     defaultConfig {
         applicationId "com.clipsub.csmanga"
         minSdkVersion 14
-        targetSdkVersion 25
-        versionCode 1
+        targetSdkVersion 26
+        versionCode 2
         versionName "2.0.0"
     }
     buildTypes {
@@ -18,10 +18,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-}
 
-sourceSets {
-    main.java.srcDirs += 'src/main/kotlin'
+    sourceSets {
+        main.java.srcDirs += 'src/main/kotlin'
+    }
 }
 
 dependencies {
@@ -30,40 +30,40 @@ dependencies {
     // Kotlin:
     compile "org.jetbrains.kotlin:kotlin-stdlib:1.1.2-3"
     // Android Support Library:
-    def supportVersion = "25.3.1"
+    def supportVersion = "26.0.0"
     compile "com.android.support:support-v4:$supportVersion"
     compile "com.android.support:appcompat-v7:$supportVersion"
     compile "com.android.support:design:$supportVersion"
     compile "com.android.support:cardview-v7:$supportVersion"
     compile "com.android.support:recyclerview-v7:$supportVersion"
     compile "com.android.support:palette-v7:$supportVersion"
+    // FlexBox:
+    compile 'com.google.android:flexbox:0.3.0'
+    // Constraint Layout:
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     // Dependency Injection:
-    compile 'com.squareup.dagger:dagger:1.2.5'
-    provided 'com.squareup.dagger:dagger-compiler:1.2.5'
-    // View Injection:
-    compile 'com.jakewharton:butterknife:8.5.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    compile 'com.google.dagger:dagger-android:2.11'
+    compile 'com.google.dagger:dagger-android-support:2.11'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.11'
     // Concurrency:
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'io.reactivex:rxjava:1.2.9'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.2'
     // Event Bus:
     compile 'org.greenrobot:eventbus:3.0.0'
     // HTTP Client:
-    // compile 'com.squareup.okhttp3:okhttp:3.2.0'
-    compile 'com.squareup.okhttp:okhttp:2.7.5'
-    compile 'com.squareup.okio:okio:1.11.0'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
     // Disk Caching:
     compile 'com.jakewharton:disklrucache:2.0.2'
     // Databasing:
     compile 'nl.qbusict:cupboard:2.2.0'
     // HTML Parsing:
-    compile 'org.jsoup:jsoup:1.8.3'
+    compile 'org.jsoup:jsoup:1.10.3'
     // Image Caching and Optimizer:
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
     compile 'com.makeramen:roundedimageview:2.3.0'
     // Debugging:
-    compile 'com.facebook.stetho:stetho:1.3.1'
-    compile 'com.facebook.stetho:stetho-okhttp:1.3.1'
+    compile 'com.facebook.stetho:stetho:1.5.0'
+    compile 'com.facebook.stetho:stetho-okhttp:1.5.0'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
 
