--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,11 @@ dependencies {
     compile 'org.greenrobot:eventbus:3.0.0'
     // HTTP Client:
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    compile 'com.squareup.retrofit2:converter-moshi:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'pl.droidsonroids:jspoon:1.0.0'
+    compile 'pl.droidsonroids.retrofit2:converter-jspoon:1.0.0'
     // Disk Caching:
     compile 'com.jakewharton:disklrucache:2.0.2'
     // Databasing:
@@ -59,7 +64,8 @@ dependencies {
     // HTML Parsing:
     compile 'org.jsoup:jsoup:1.10.3'
     // Image Caching and Optimizer:
-    compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
+    compile 'com.github.bumptech.glide:glide:4.0.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
     compile 'com.makeramen:roundedimageview:2.3.0'
     // Debugging:
     compile 'com.facebook.stetho:stetho:1.5.0'
